--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,15 @@
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
                 <version>1.6.6</version>
-                <executions>true<</executions>
+                <executions>
+                    <execution>
+                        <id>default-deploy</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <serverId>nexus</serverId>
                     <nexusUrl>http://172.18.0.3:8081/nexus/</nexusUrl>
