--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <project.scm.id>github-credentials</project.scm.id>
     </properties>
 
     <parent>
