--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.redgeek</groupId>
     <artifactId>setupMavenBuildRelease</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <name>MavenNexusSetup</name>
 
     <properties>
@@ -81,7 +81,7 @@
         <url>https://github.com/kramik1/setupMvnBuildRelease</url>
         <connection>scm:git:https://github.com/kramik1/setupMvnBuildRelease.git</connection>
         <developerConnection>scm:git:https://github.com/kramik1/setupMvnBuildRelease.git</developerConnection>
-      <tag>v1.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <distributionManagement>
