--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.redgeek</groupId>
     <artifactId>setupMavenBuildRelease</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
     <name>MavenNexusSetup</name>
 
     <properties>
@@ -81,8 +83,7 @@
         <url>https://github.com/kramik1/setupMvnBuildRelease</url>
         <connection>scm:git:https://github.com/kramik1/setupMvnBuildRelease.git</connection>
         <developerConnection>scm:git:https://github.com/kramik1/setupMvnBuildRelease.git</developerConnection>
-      <tag>HEAD</tag>
-  </scm>
+    </scm>
 
     <distributionManagement>
         <snapshotRepository>
@@ -115,7 +116,7 @@
                         </executions>
                         <configuration>
                             <serverId>nexus-releases</serverId>
-                            <nexusUrl>http://172.18.0.03:8081/nexus/</nexusUrl>
+                            <nexusUrl>http://172.18.0.03:8081/</nexusUrl>
                             <skipStaging>true</skipStaging>
                         </configuration>
                     </plugin>
